<resources>
    <string name="app_name">Weight &amp; Balance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aircrafts">Aircrafts</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test">test</string>
    <string name="new_aircraft_specification">New Aircraft Specification</string>
    <string name="name">Name</string>
    <string name="test_airplane_1">Test Airplane 1</string>
    <string name="_79_in_inches">79 (in inches)</string>
    <string name="pilot_arm">Pilot Arm</string>
    <string name="first_row_arm">First Row Arm</string>
    <string name="fuel_arm">Fuel Arm</string>
    <string name="baggage_arm">Baggage Arm</string>
    <string name="save">Save</string>
    <string name="empty_weight">Empty Weight</string>
    <string name="weight_balance"><![CDATA[Weight & Balance]]></string>
</resources>